; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_redis.c_disconnect_method.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_redis.c_disconnect_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_mruby_redis_client_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @disconnect_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @disconnect_method(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_h2o_mruby_redis_client_t*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call %struct.st_h2o_mruby_redis_client_t* @DATA_PTR(i32 %6)
  store %struct.st_h2o_mruby_redis_client_t* %7, %struct.st_h2o_mruby_redis_client_t** %5, align 8
  %8 = load %struct.st_h2o_mruby_redis_client_t*, %struct.st_h2o_mruby_redis_client_t** %5, align 8
  %9 = getelementptr inbounds %struct.st_h2o_mruby_redis_client_t, %struct.st_h2o_mruby_redis_client_t* %8, i32 0, i32 0
  %10 = call i32 @h2o_redis_disconnect(i32* %9)
  %11 = load i32, i32* %4, align 4
  ret i32 %11
}

declare dso_local %struct.st_h2o_mruby_redis_client_t* @DATA_PTR(i32) #1

declare dso_local i32 @h2o_redis_disconnect(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
